--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
+
 # Cache and logs (Symfony2)
 /app/cache/*
 /app/logs/*
@@ -29,8 +47,6 @@
 /bin/*
 !bin/console
 !bin/symfony_requirements
-/vendor/
-
 # Assets and user uploads
 /web/bundles/
 /web/uploads/
