--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,42 @@ yarn-error.log
 
 # Embedded web-server pid file
 /.web-server-pid
+/.env
+/.idea/.gitignore
+/migrations/.gitignore
+/src/Controller/.gitignore
+/src/Entity/.gitignore
+/src/Repository/.gitignore
+/assets/styles/app.css
+/assets/app.js
+/templates/base.html.twig
+/assets/bootstrap.js
+/config/bootstrap.php
+/config/bundles.php
+/config/packages/cache.yaml
+/.idea/codeception.xml
+/composer.lock
+/bin/console
+/assets/controllers.json
+/config/packages/prod/doctrine.yaml
+/config/packages/test/doctrine.yaml
+/config/packages/test/framework.yaml
+/config/packages/framework.yaml
+/config/routes/dev/framework.yaml
+/.idea/commandlinetools/schemas/frameworkDescriptionVersion1.1.4.xsd
+/assets/controllers/hello_controller.js
+/public/index.php
+/src/Kernel.php
+/.idea/modules.xml
+/package.json
+/.idea/php.xml
+/.idea/phpspec.xml
+/.idea/phpunit.xml
+/config/preload.php
+/symfony.lock
+/.idea/commandlinetools/Symfony_14_10_2023_19_04.xml
+/.idea/task-management.iml
+/.idea/vcs.xml
+/migrations/Version20231014160526.php
+/webpack.config.js
+/config/packages/webpack_encore.yaml
